# best-dealz

./: Dockerfile  README.md  check.ps1  pyproject.toml  requirements.txt
best_dealz/: checkmanager.py  idealo.py  notifications.py  paths.py  pricechecker.py  smtp2go.py
best_dealz/checker/: denicheur.py  idealo.py  pricechecker.py
best_dealz/cli/: __init__.py
tests/: test_denicheur.py  test_idealo.py
