[tool.poetry]
name = "best-dealz"
version = "0.1.0"
description = ""
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]
readme = "README.md"
packages = [{include = "best_dealz"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.0.0"
black = "^24.2.0"
mypy = "^1.8.0"
pylint = "^3.1.0"
pytest = "^8.0.2"
isort = "^5.13.2"
pydantic = "^2.6.3"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
types-requests = "^2.31.0.20240218"
types-beautifulsoup4 = "^4.12.0.20240229"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dealz = "best-dealz.cli:main"